# Document-Intake-OS

./: .gitattributes  .gitignore  AGENTS.md  DOCUMENTS-MANIFEST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: acceptance-criteria.md  architecture.md  decisions.md  development-workflow.md  domain-model.md  excel-adapters.md  file-storage-model.md  handoff.md  image-pipeline.md  implementation-plan.md  non-functional-requirements.md  open-questions.md  product-spec.md  progress.md  project-charter.md  recognition-strategy.md  roadmap.md  security.md  technical-specification.md  terminology.md  testing-strategy.md  traceability-matrix.md
docs/decisions/: ADR-023-image-quality-assessment-v1.md  ADR-024-image-geometry-recipe-v1.md  PR-008-D1-lifecycle-acceptance.md  PR-009-D1-implementation-authorization.md  PR-009-D4-lifecycle-acceptance.md  PR-S001-D1-encryption-feasibility-acceptance.md
docs/research/: PR-S001-windows-encryption-feasibility.md
docs/tasks/: GATE-M0-requirements-lock.md  GATE-S1-acceptance.md  GATE-S1-encryption-staging.md  PR-001-repository-bootstrap.md  PR-002-documentation-baseline.md  PR-003-ci-privacy-guardrails.md  PR-004-core-domain.md  PR-005-encrypted-sqlite-persistence.md  PR-006-immutable-filesystem-storage.md  PR-007-audit-events.md  PR-008-file-import-duplicate-detection.md  PR-009-orientation-quality-assessment.md  PR-010-geometry-tools.md  PR-S001-F1-windows-cleanup-acl-evidence.md  PR-S001-F2-wal-journal-evidence.md  PR-S001-F3-windows-acl-diagnostics.md  PR-S001-F4-windows11-target-attestation.md  PR-S001-windows-encryption-feasibility.md
resources/templates/: README.md
scripts/: check_repository_policy.py  verify_pr006_storage.py  verify_pr007_audit.py  verify_pr008_import.py  verify_pr009_quality.py  verify_pr010_geometry.py
spikes/windows_encryption/: acl_probe.py  crash_consistency_probe.py  dpapi_probe.py  envelope_probe.py  key_strategy_probe.py  offline_smoke.py  performance_probe.py  run.py  safe_report.py  sqlcipher_probe.py  windows_target_probe.py
src/document_intake/: __init__.py  __main__.py
tests/: test_bootstrap.py  test_documentation_baseline.py  test_repository_policy.py  test_verify_pr008_migration_chain.py  test_verify_pr009_quality.py  test_verify_pr010_geometry.py
tests/application/: test_image_geometry_service.py  test_image_quality_service.py  test_import_service.py
tests/domain/: test_application_snapshots.py  test_audit_events.py  test_document_transitions.py  test_image_geometry.py  test_image_quality.py  test_import_contracts.py  test_value_objects_and_entities.py  (+1 more)
(+100 files in other folders)
