[project]
name = "document-intake-os"
version = "0.1.0"
description = "Offline Windows desktop application skeleton for document intake workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Document Intake OS maintainers" }]
dependencies = [
    "PySide6>=6.7,<7",
]

[project.scripts]
document-intake = "document_intake.ui.app:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["document_intake"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.mypy.overrides]]
module = ["PySide6", "PySide6.*"]
ignore_missing_imports = true
