[project]
name = "document-intake-os"
version = "0.1.0"
description = "Offline Windows desktop application skeleton for document intake workflows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Document Intake OS maintainers" }]
dependencies = [
    "PySide6>=6.7,<7",
    "cryptography==49.0.0",
    "Pillow==12.3.0",
    "pi-heif==1.4.0",
    "sqlcipher3==0.6.2; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.scripts]
document-intake = "document_intake.ui.app:main"

[dependency-groups]
encryption-spike = [
    "cryptography==49.0.0; sys_platform == 'win32'",
]

dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_intake"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["document_intake"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.mypy.overrides]]
module = ["PySide6", "PySide6.*", "cryptography", "cryptography.*"]
ignore_missing_imports = true
